# client-tls-websocketpp

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
libs/: CMakeLists.txt
libs/adapters/: CMakeLists.txt
libs/adapters/inc/: adapters.hpp  ringbuffer.hpp
libs/adapters/src/: adapters.cpp
libs/utils/: CMakeLists.txt
libs/utils/inc/: ws.hpp
libs/utils/src/: ws.cpp
